--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 12px; /* px 意为“像素（pixels）”: 这个基础字体的尺寸现在是10像素  */
-  font-family: 'Concert One', cursive;
+  font-family: 'Abel', sans-serif;;
   background-color: #30A3A8;
 }
 
@@ -20,7 +20,7 @@ h1 {
 }
 
 p, li {
-  line-height: 2;
+  line-height: 1;
   letter-spacing: 1px;
 }
 
