--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 12px; /* px 意为“像素（pixels）”: 这个基础字体的尺寸现在是10像素  */
-  font-family: 'Abel', sans-serif;;
+  font-family: 'Orbitron', sans-serif;
   background-color: #30A3A8;
 }
 
